# esp32-ps3-project

./: .gitmodules  sdkconfig  sdkconfig.old
components/ps3/: CMakeLists.txt
components/ps3/src/: ps3.c
main/: main.c
